--- a/index.html
+++ b/index.html
@@ -14,26 +14,46 @@
   <div class = "mainbody1">
     
     <div class = "gameStatus">
-      <h2>Welcome! Click a square to begin.</h2>
+      <h2 id = "gameStatusText">Welcome! Click a square to begin.</h2>
     </div>
     
+    <!--
     <table>
         <tr>
-        <td><p id = "box1">X</p></td>
-        <td><p id = "box2">O</p></td>
-        <td><p id = "box3">X</p></td>
+        <td id = "box0" onclick = "playerInput(0)"><p id = "0"> </p></td>
+        <td id = "box1" onclick = "playerInput(1)"><p id = "1"> </p></td>
+        <td id = "box2" onclick = "playerInput(2)"><p id = "2"> </p></td>
       </tr>
       <tr>
-        <td><p id = "box4">O</p></td>
-        <td><p id = "box5">X</p></td>
-        <td><p id = "box6">O</p></td>
+        <td id = "box3" onclick = "playerInput(3)"><p id = "3"> </p></td>
+        <td id = "box4" onclick = "playerInput(4)"><p id = "4"> </p></td>
+        <td id = "box5" onclick = "playerInput(5)"><p id = "5"> </p></td>
       </tr>
       <tr>
-        <td><p id = "box7">X</p></td>
-        <td><p id = "box8">O</p></td>
-        <td><p id = "box9">X</p></td>
+        <td id = "box6" onclick = "playerInput(6)"><p id = "6"> </p></td>
+        <td id = "box7" onclick = "playerInput(7)"><p id = "7"> </p></td>
+        <td id = "box8" onclick = "playerInput(8)"><p id = "8"> </p></td>
       </tr>
     </table>
+    -->
+
+    <table>
+      <tr>
+      <td id = "0" onclick = "playerInput(0)"><p> </p></td>
+      <td id = "1" onclick = "playerInput(1)"><p> </p></td>
+      <td id = "2" onclick = "playerInput(2)"><p> </p></td>
+    </tr>
+    <tr>
+      <td id = "3" onclick = "playerInput(3)"><p> </p></td>
+      <td id = "4" onclick = "playerInput(4)"><p> </p></td>
+      <td id = "5" onclick = "playerInput(5)"><p> </p></td>
+    </tr>
+    <tr>
+      <td id = "6" onclick = "playerInput(6)"><p> </p></td>
+      <td id = "7" onclick = "playerInput(7)"><p> </p></td>
+      <td id = "8" onclick = "playerInput(8)"><p> </p></td>
+    </tr>
+  </table>
 
 
     <div class = "gameDifficulty">
