Initialized function for hardComputerInput

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class = "gameDifficulty">
       <label for="difficultySelect"> Choose a difficulty: </label>
 
-      <select onclick= "clearGame()" name="difficulty">
+      <select id = "difficultySelector" onclick= "clearGame()" name="difficulty">
         <option value="easy">Easy</option>
         <option value="hard">Hard</option>
       </select>
