Removed hardComputerInput function and Hard selection from webpage

--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
 
       <select id = "difficultySelector" onclick= "clearGame()" name="difficulty">
         <option value="easy">Easy</option>
-        <option value="hard">Hard</option>
+        <!-- <option value="hard">Hard</option> -->
       </select>
+
+      <button onclick = "clearGame()">Reset Board</button>
     </div>
 
   </div>
