--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="styles/style.css" rel="stylesheet">
+  <link rel="icon" type="image/ico" href="images/board.ico">
   <title>TicTacToe</title>
 </head>
 <body>
